// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Badge control 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-badge-container"
  >
    Test Component
    <styled.div
      className="ui-badge test-class"
      location="topRight"
      onClick={[Function]}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "blue",
          "border": "solid 3px",
          "color": "red",
        }
      }
    >
      1
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test making the Badge control invisible 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-badge-container"
  >
    <styled.div
      className="ui-badge"
      location="topRight"
      onClick={[Function]}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "white",
          "border": "solid 3px",
          "color": "red",
        }
      }
    >
      0
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test retrieval of Badge props object 1`] = `
Object {
  "bottom": "",
  "children": null,
  "className": "",
  "contentEditable": false,
  "counter": 0,
  "direction": "right",
  "disabled": false,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "id": "",
  "left": "",
  "location": "topRight",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "obj": "Badge",
  "onClick": [Function],
  "padding": "",
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "backgroundColor": "white",
    "border": "solid 3px",
    "color": "red",
  },
  "suppress": false,
  "testing": true,
  "theme": null,
  "tooltip": "",
  "top": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;

exports[`Test the disabling of a Badge control 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-badge-container"
  >
    <styled.div
      className="ui-badge"
      location="topRight"
      onClick={[Function]}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "white",
          "border": "solid 3px",
          "color": "red",
        }
      }
    >
      0
    </styled.div>
  </styled.div>
</ThemeProvider>
`;
